--- a/src/Components/Weather/Weather.css
+++ b/src/Components/Weather/Weather.css
@@ -39,6 +39,37 @@
   background-color: #ebfffc;
   border-radius: 40px;
   cursor: pointer;
+  transition: 1s;
+}
+.top-bar .search-icon:hover {
+  animation: myAnim 2s ease 0s 1 normal forwards;
+}
+@keyframes myAnim {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70% {
+    transform: translateY(-8px);
+  }
+
+  20%,
+  40%,
+  60% {
+    transform: translateY(8px);
+  }
+
+  80% {
+    transform: translateY(6.4px);
+  }
+
+  90% {
+    transform: translateY(-6.4px);
+  }
 }
 .top-bar .search-icon img {
   width: 50%;
@@ -77,4 +108,14 @@
   gap: 10px;
   font-size: 20px;
   font-weight: 400;
+}
+
+@media (max-width: 430px) {
+  /* Your styles for screens with a maximum width of 430px go here */
+
+  .container {
+    width: 100vw !important;
+    height: 100vh !important;
+    margin: 0;
+  }
 }
